- recreate project with compose mp wizard

--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,18 @@
 *.iml
+.kotlin
 .gradle
+**/build/
+xcuserdata
+!src/**/build/
+local.properties
 .idea
 .DS_Store
-build
 captures
 .externalNativeBuild
 .cxx
-local.properties
-xcuserdata
-.kotlin/metadata/
-.kotlin/sessions/kotlin-compiler-12875300825779188636.salive
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata/
+!*.xcodeproj/project.xcworkspace/
+!*.xcworkspace/contents.xcworkspacedata
+**/xcshareddata/WorkspaceSettings.xcsettings
